After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 127205 - Cannot select two cells as arguments with the mouse
Cannot select two cells as arguments with the mouse
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-11-17 16:34 UTC by Jean Bréfort
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jean Bréfort 2003-11-17 16:34:16 UTC
The proble described here does not exist in C locale but my locale is fr_FR.

I tried to use functions using several arguments, each one being the
content of a cell or a range of cells. For example, with the bessely
function, I type:

=bessely(

then click on the cell containing the first argument and type a semicolon
(the separator in french locale), I obtain:

=bessely(A1;

if I click on the second cell, I get the message:

Could not find matching closing parenthesis

If instead of using a semicolon, I use a comma, Things work, but I obtain:

Invalid expression

If I use a function with a variable number of arguments such as average,
the semicolon is just replaced by a closing parenthesis and the cell where
I clicked is selected.
Comment 1 Jody Goldberg 2003-11-17 18:36:20 UTC
This has been there a long time.  Its sad that no one has reported it
before.  Thanks.

Fixed in cvs.  Patch will be in 1.2.2