http://bugzilla.gnome.org/show_bug.cgi?id=127205 Handle locale specific

2003-11-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=127205
	* gnumeric-expr-entry.c (split_char_p) : Handle locale specific arg
	  seperators.

2003-11-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=127204
	* ms-chart.c (ms_excel_read_chart) : remove any grids that were
	  automaticlly created if there were none in the input stream.

	* plugins/excel/ms-chart.c (BC_R(areaformat)) : we need to consider
	  pattern = 0 as NONE only if it is not autoformat.  Our theme engine
	  does not change fill types, so it would ignore styles with fill=NONE


2003-11-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=127238
	* src/format-template.c (format_template_transform_edges) : fix.

	http://bugzilla.gnome.org/show_bug.cgi?id=127211
	* src/style.c (style_default_halign) : errors appear to have default
	  horizontal alignment of center.  This is ancient code, I wonder why
	  no one ever noticed.

	http://bugzilla.gnome.org/show_bug.cgi?id=127199
	* src/gui-file.c (gui_file_read) : do a sheet_update after a
	  successful read.